Add commas to numbers in asset allocation mix

--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -746,14 +746,14 @@
                                         <div class="col-xs-6 text-right">
                                             <h2 class="debt">Debt</h2>
                                             <p class="debt">{{modelVal.assetAllocation.debt}}%</p>
-                                            <h4><span class="currency">&#8377</span>{{modelVal.debtAmount}}</h4>
-                                            <h4 ng-show = "modelVal.debtAmountLumpsum"><span class="currency">&#8377</span>{{modelVal.debtAmountLumpsum}}</h4>
+                                            <h4><span class="currency">&#8377</span>{{modelVal.debtAmount | amountFormat}}</h4>
+                                            <h4 ng-show = "modelVal.debtAmountLumpsum"><span class="currency">&#8377</span>{{modelVal.debtAmountLumpsum | amountFormat}}</h4>
                                         </div>
                                         <div class="col-xs-6 text-left">
                                             <h2 class="equity">Equity</h2>
                                             <p class="equity">{{modelVal.assetAllocation.equity}}%</p>
-                                            <h4><span class="currency">&#8377</span>{{modelVal.equityAmount}}</h4>
-                                            <h4 ng-show = "modelVal.equityAmountLumpsum"><span class="currency">&#8377</span>{{modelVal.equityAmountLumpsum}}</h4>
+                                            <h4><span class="currency">&#8377</span>{{modelVal.equityAmount | amountFormat}}</h4>
+                                            <h4 ng-show = "modelVal.equityAmountLumpsum"><span class="currency">&#8377</span>{{modelVal.equityAmountLumpsum | amountFormat}}</h4>
                                         </div>
                                     </div>
                                 </div>
@@ -996,12 +996,12 @@
                                         <div class="col-xs-6 text-right">
                                             <h2 class="debt">Debt</h2>
                                             <p class="debt">{{modelVal.assetAllocation.debt}}%</p>
-                                            <h4 ><span class="currency">&#8377</span>{{modelVal.debtAmount}}</h4>
+                                            <h4 ><span class="currency">&#8377</span>{{modelVal.debtAmount | amountFormat}}</h4>
                                         </div>
                                         <div class="col-xs-6 text-left">
                                             <h2 class="equity">Equity</h2>
                                             <p class="equity">{{modelVal.assetAllocation.equity}}%</p>
-                                            <h4><span class="currency">&#8377</span>{{modelVal.equityAmount}}</h4>
+                                            <h4><span class="currency">&#8377</span>{{modelVal.equityAmount | amountFormat}}</h4>
                                         </div>
                                     </div>
                                 </div>
@@ -1236,12 +1236,12 @@
                                         <div class="col-xs-6 text-right">
                                             <h2 class="debt">Debt</h2>
                                             <p class="debt">{{modelVal.assetAllocation.debt}}%</p>
-                                            <h4 ><span class="currency">&#8377</span>{{modelVal.debtAmount}}</h4>
+                                            <h4 ><span class="currency">&#8377</span>{{modelVal.debtAmount | amountFormat}}</h4>
                                         </div>
                                         <div class="col-xs-6 text-left">
                                             <h2 class="equity">Equity</h2>
                                             <p class="equity">{{modelVal.assetAllocation.equity}}%</p>
-                                            <h4><span class="currency">&#8377</span>{{modelVal.equityAmount}}</h4>
+                                            <h4><span class="currency">&#8377</span>{{modelVal.equityAmount | amountFormat}}</h4>
                                         </div>
                                     </div>
                                 </div>
@@ -1519,12 +1519,12 @@
                                         <div class="col-xs-6 text-right">
                                             <h2 class="debt">Debt</h2>
                                             <p class="debt">{{modelVal.assetAllocation.debt}}%</p>
-                                            <h4 ><span class="currency">&#8377</span>{{modelVal.debtAmount}}</h4>
+                                            <h4 ><span class="currency">&#8377</span>{{modelVal.debtAmount | amountFormat}}</h4>
                                         </div>
                                         <div class="col-xs-6 text-left">
                                             <h2 class="equity">Equity</h2>
                                             <p class="equity">{{modelVal.assetAllocation.equity}}%</p>
-                                            <h4><span class="currency">&#8377</span>{{modelVal.equityAmount}}</h4>
+                                            <h4><span class="currency">&#8377</span>{{modelVal.equityAmount | amountFormat}}</h4>
                                         </div>
                                     </div>
                                 </div>
@@ -1799,12 +1799,12 @@
                                         <div class="col-xs-6 text-right">
                                             <h2 class="debt">Debt</h2>
                                             <p class="debt">{{modelVal.assetAllocation.debt}}%</p>
-                                            <h4 ><span class="currency">&#8377</span>{{modelVal.debtAmount}}</h4>
+                                            <h4 ><span class="currency">&#8377</span>{{modelVal.debtAmount | amountFormat}}</h4>
                                         </div>
                                         <div class="col-xs-6 text-left">
                                             <h2 class="equity">Equity</h2>
                                             <p class="equity">{{modelVal.assetAllocation.equity}}%</p>
-                                            <h4><span class="currency">&#8377</span>{{modelVal.equityAmount}}</h4>
+                                            <h4><span class="currency">&#8377</span>{{modelVal.equityAmount | amountFormat}}</h4>
                                         </div>
                                     </div>
                                 </div>
@@ -2067,12 +2067,12 @@
                                         <div class="col-xs-6 text-right">
                                             <h2 class="debt">Debt</h2>
                                             <p class="debt">{{modelVal.assetAllocation.debt}}%</p>
-                                            <h4 ><span class="currency">&#8377</span>{{modelVal.debtAmount}}</h4>
+                                            <h4 ><span class="currency">&#8377</span>{{modelVal.debtAmount | amountFormat}}</h4>
                                         </div>
                                         <div class="col-xs-6 text-left">
                                             <h2 class="equity">Equity</h2>
                                             <p class="equity">{{modelVal.assetAllocation.equity}}%</p>
-                                            <h4><span class="currency">&#8377</span>{{modelVal.equityAmount}}</h4>
+                                            <h4><span class="currency">&#8377</span>{{modelVal.equityAmount | amountFormat}}</h4>
                                         </div>
                                     </div>
                                 </div>
@@ -2303,12 +2303,12 @@
                                         <div class="col-xs-6 text-right">
                                             <h2 class="debt">Debt</h2>
                                             <p class="debt">{{modelVal.assetAllocation.debt}}%</p>
-                                            <h4 ><span class="currency">&#8377</span>{{modelVal.debtAmount}}</h4>
+                                            <h4 ><span class="currency">&#8377</span>{{modelVal.debtAmount | amountFormat}}</h4>
                                         </div>
                                         <div class="col-xs-6 text-left">
                                             <h2 class="equity">Equity</h2>
                                             <p class="equity">{{modelVal.assetAllocation.equity}}%</p>
-                                            <h4><span class="currency">&#8377</span>{{modelVal.equityAmount}}</h4>
+                                            <h4><span class="currency">&#8377</span>{{modelVal.equityAmount | amountFormat}}</h4>
                                         </div>
                                     </div>
                                 </div>
@@ -2477,12 +2477,12 @@
                                         <div class="col-xs-6 text-right">
                                             <h2 class="debt">Debt</h2>
                                             <p class="debt">{{modelVal.assetAllocation.debt}}%</p>
-                                            <h4 ><span class="currency">&#8377</span>{{modelVal.debtAmount}}</h4>
+                                            <h4 ><span class="currency">&#8377</span>{{modelVal.debtAmount | amountFormat}}</h4>
                                         </div>
                                         <div class="col-xs-6 text-left">
                                             <h2 class="equity">Equity</h2>
                                             <p class="equity">{{modelVal.assetAllocation.equity}}%</p>
-                                            <h4><span class="currency">&#8377</span>{{modelVal.equityAmount}}</h4>
+                                            <h4><span class="currency">&#8377</span>{{modelVal.equityAmount | amountFormat}}</h4>
                                         </div>
                                     </div>
                                 </div>
@@ -2713,12 +2713,12 @@
                                         <div class="col-xs-6 text-right">
                                             <h2 class="debt">Debt</h2>
                                             <p class="debt">{{modelVal.assetAllocation.debt}}%</p>
-                                            <h4 ><span class="currency">&#8377</span>{{modelVal.debtAmount}}</h4>
+                                            <h4 ><span class="currency">&#8377</span>{{modelVal.debtAmount | amountFormat}}</h4>
                                         </div>
                                         <div class="col-xs-6 text-left">
                                             <h2 class="equity">Equity</h2>
                                             <p class="equity">{{modelVal.assetAllocation.equity}}%</p>
-                                            <h4><span class="currency">&#8377</span>{{modelVal.equityAmount}}</h4>
+                                            <h4><span class="currency">&#8377</span>{{modelVal.equityAmount | amountFormat}}</h4>
                                         </div>
                                     </div>
                                 </div>
@@ -3461,8 +3461,8 @@
                 </div>
             </div>
             <div class="col-xs-12 bottom-desc">
-                <p><span class="bottom-label">Amount in Debt:</span><span class="amount-cover less"><span class="currency">&#8377</span><span class="amount">{{debtAmountModal}}</span></span></p>
-                <p><span class="bottom-label">Amount in Equity:</span><span class="amount-cover"><span class="currency">&#8377</span><span ng-bind="equityValue|currency:''"></span><span class="amount">{{equityAmountModal}}</span></p>
+                <p><span class="bottom-label">Amount in Debt:</span><span class="amount-cover less"><span class="currency">&#8377</span><span class="amount">{{debtAmountModal | amountFormat}}</span></span></p>
+                <p><span class="bottom-label">Amount in Equity:</span><span class="amount-cover"><span class="currency">&#8377</span><span ng-bind="equityValue|currency:''"></span><span class="amount">{{equityAmountModal | amountFormat}}</span></p>
                 <p class="note" ng-if="(equityAmountModal < minAmount && debtAmountModal < minAmount)">Note: Investment in Debt and Equity funds below minimum limit <span class="currency">&#8377</span><span class="amount"><span class="amount">{{minAmount}}</span></span></p>
                 <p class="note" ng-if="(debtAmountModal > 0 && debtAmountModal < minAmount)">Note: Investment in Debt funds below minimum limit <span class="currency">&#8377</span><span class="amount">{{minAmount}}</span></p>
                 <p class="note" ng-if="(equityAmountModal > 0 && equityAmountModal < minAmount)">Note: Investment in Equity funds below minimum limit <span class="currency">&#8377</span><span class="amount">{{minAmount}}</span></p>
