Worked on fixing bugs and issues

--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -877,7 +877,7 @@
                 <div class="swiper-content">
                     <h1 class="topHeader">I would like to plan my retirement at the following age</h1>
                     <span class="placeholder">Click to edit</span>
-                    <div class="col-xs-8 col-sm-6 col-md-6 col-lg-4 calender-outer-cover">
+                    <div class="col-xs-12 col-sm-6 col-md-6 col-lg-4 calender-outer-cover">
                         <div class="row">
                             <div class="col-xs-5 col-sm-4 col-md-4 col-lg-4">
                                 <div class="row">
@@ -886,7 +886,7 @@
                                 </div>
                             </div>
                             <div class="col-xs-2 col-sm-3 calendar-divider"><span></span></div>
-                            <div class="col-xs-5 col-sm-5 col-md-4 col-lg-4">
+                            <div class="col-xs-5 col-sm-5 col-md-5 col-lg-5">
                                 <div class="row">
                                     <h3 class="calendarHeader">Retirement Age</h3>
                                     <fin-calendar-form ng-init="modelVal.A3 = 60" ng-model="modelVal.A3" format-symbol="none" type="#fde8de" font-color="#f26529" min="0" max="100"></fin-calendar-form>
@@ -2604,7 +2604,7 @@
             <form name="quickInvestForm2" novalidate>
                 <div class="swiper-content">
                     <h1 class="topHeader">I wish to purchase this jewellery in</h1>
-                    <div class="col-xs-8 col-sm-6 col-md-6 col-lg-4 calender-outer-cover">
+                    <div class="col-xs-5 col-sm-3 col-md-4 col-lg-4 calender-outer-cover">
                         <div class="row">
                             <div class="col-xs-12 col-sm-12 col-md-8 col-lg-8">
                                 <div class="row">
@@ -2663,7 +2663,7 @@
                                 <label for="budget"><span></span></label>
                             </div>
                             </div>
-                            <div class="col-xs-12 col-lg-3 col-md-3 estimate-cover" ng-class="{'active' : modelVal.estimate_selection_type =='op2'}" ng-click="modelVal.estimate_selection_type = 'op2';estimateSelectionChanged('comfortable')">
+                            <div class="col-xs-12 col-sm-3 col-lg-3 col-md-3 estimate-cover" ng-class="{'active' : modelVal.estimate_selection_type =='op2'}" ng-click="modelVal.estimate_selection_type = 'op2';estimateSelectionChanged('comfortable')">
                             <div class="pigy"><info-tip quick-tip-data="comfInfoText" info-width="28px"></info-tip></div>
                             <div class="image-div text-center">
                                 <img src="assets/images/confortable.png">
@@ -2676,7 +2676,7 @@
                                 <label for="confort"><span></span></label>
                             </div>
                             </div>
-                            <div class="col-xs-12 col-lg-3 col-md-3 estimate-cover" ng-class="{'active' : modelVal.estimate_selection_type =='op3'}" ng-click="modelVal.estimate_selection_type = 'op3';estimateSelectionChanged('luxury')">
+                            <div class="col-xs-12 col-sm-3 col-lg-3 col-md-3 estimate-cover" ng-class="{'active' : modelVal.estimate_selection_type =='op3'}" ng-click="modelVal.estimate_selection_type = 'op3';estimateSelectionChanged('luxury')">
                             <div class="pigy"><info-tip quick-tip-data="luxuInfoText" info-width="28px"></info-tip></div>
                             <div class="image-div text-center">
                                 <img src="assets/images/jewellery.svg">
