--- a/less/trackperformance.less
+++ b/less/trackperformance.less
@@ -105,6 +105,9 @@ section{
 			background-image: -webkit-linear-gradient( 90deg, rgb( 245, 245, 245 ) 0%, rgb( 255, 255, 255 ) 100%);
 			box-shadow: 1px 5.33px 11px -4px rgb( 36, 122, 188 );
 			padding: 30px;
+			@media @below600{
+				padding: 7px;
+			}
 			h3{
 				.GLOBAL_FONT_STYLE('PlayfairDisplay-Regular',@black,normal);
 				.PIXEL2EM(18);
