--- a/less/widgets.less
+++ b/less/widgets.less
@@ -514,7 +514,7 @@ input{
 		width:100%;
 		float:left;
 		@media @below768{
-			max-width: 314px;
+			max-width: 96%;
 			overflow-x: scroll;
 		}
 		.panel{
