--- a/app/assets/css/main.css
+++ b/app/assets/css/main.css
@@ -5649,7 +5649,7 @@ input.datepicker::placeholder {
 }
 @media only screen and (max-width:768px) {
   .customPanel.panel-group {
-    max-width: 314px;
+    max-width: 96%;
     overflow-x: scroll;
   }
 }
@@ -5966,6 +5966,7 @@ section.registerInvestor .registerInvestorConfirm {
   width: 50%;
   float: left;
   padding: 3% 3%;
+  margin-bottom: 2%;
   background-image: -moz-linear-gradient(90deg, #f5f5f5 0%, #ffffff 100%);
   background-image: -webkit-linear-gradient(90deg, #f5f5f5 0%, #ffffff 100%);
   -webkit-box-shadow: 1px 5.33px 11px -4px #047bc1;
@@ -6294,11 +6295,22 @@ section.registerInvestor .registerInvestorConfirm {
   width: 20%;
   word-wrap: break-word;
 }
+@media only screen and (max-width:768px) {
+  .table-outer-cover.investNowTable .thead .th {
+    width: 25%;
+  }
+}
 .table-outer-cover.investNowTable .tbody {
   width: 96%;
 }
 .table-outer-cover.investNowTable .tbody .td {
   width: 20%;
+}
+@media only screen and (max-width:768px) {
+  .table-outer-cover.investNowTable .tbody .td {
+    width: 24%;
+    padding: 1%;
+  }
 }
 .table-outer-cover.investNowTable .tfooter {
   border-top: 1px solid #e0e0e0;
@@ -6311,9 +6323,9 @@ section.registerInvestor .registerInvestorConfirm {
   float: left;
   width: 60%;
 }
-@media only screen and (max-width:600px) {
+@media only screen and (max-width:768px) {
   .table-outer-cover.investNowTable .tfooter .total {
-    width: 40%;
+    width: 50%;
   }
 }
 .table-outer-cover.investNowTable .tfooter .sipTotal {
@@ -7586,6 +7598,11 @@ section.trackPerformance .last-day-change {
      -moz-box-shadow: 1px 5.33px 11px -4px #247abc;
           box-shadow: 1px 5.33px 11px -4px #247abc;
   padding: 30px;
+}
+@media only screen and (max-width:600px) {
+  section.trackPerformance .last-day-change {
+    padding: 7px;
+  }
 }
 section.trackPerformance .last-day-change h3 {
   font-family: 'PlayfairDisplay-Regular';
