--- a/app/modules/dashboard/views/dashboard.html
+++ b/app/modules/dashboard/views/dashboard.html
@@ -17,7 +17,7 @@
 					<p class="text-center desc">Your risk assessment based on a few simple questions helps us give you more customized advice.</p>
 					<div ng-if="risk_score">
 						<h3 class="text-center">Your current risk score is</h3>
-						<p class="text-center score">{{risk_score}}</p>
+						<p class="text-center score">{{risk_score | number:1}}</p>
 						<h4 class="text-center">{{riskType}} taker</h4>
 					</div>
 
