--- a/app/modules/investwithdraw/views/investStep1.html
+++ b/app/modules/investwithdraw/views/investStep1.html
@@ -1,7 +1,7 @@
 <section class="investStep1">
-	<div class="col-xs-12">
+	<div class="col-xs-12 ">
 		<div class="row">
-			<div class="col-xs-12 col-lg-4 col-md-4 pie-cover">
+			<div class="col-xs-12 col-lg-4 col-md-5 pie-cover no-paddingDevice">
 				<p><span class="placeholder pie-header">Your asset allocation for the year</span></p>
 				<invest-pie-chart items="$root.resultPercentage" title="$root.pieTitle" colors="$root.colors"></invest-pie-chart>
 				<div class="pie-chart-legend">
@@ -17,7 +17,7 @@
 				</div>
 				<!-- <span class="placeholder bottom">*investment amounts are rounded off to the nearest hundred</span> -->
 			</div>
-			<div class="col-xs-12 col-lg-8 col-md-8 xScrollDiv">
+			<div class="col-xs-12 col-lg-8 col-md-7 xScrollDiv no-paddingDevice">
 				<p><span class="placeholder pie-header">Your goal summary</span></p>
 				<div class="table-outer-cover investNowTable">
 					<div class="thead">
@@ -29,7 +29,7 @@
 								<p>Expected Corpus</p>
 							</div>
 							<div class="th">
-								<p>Tenure(Years)</p>
+								<p>Tenure (Years)</p>
 							</div>
 							<div class="th">
 								<p>SIP</p>
