--- a/app/modules/trackperformance/views/trackPerformanceStart.html
+++ b/app/modules/trackperformance/views/trackPerformanceStart.html
@@ -104,7 +104,7 @@
 						<div class="col-xs-12 col-lg-12 trackPerformanceLegendCont no-padding">
 
 						<div class="trackPerformanceLegends col-xs-12 no-padding">
-							<p ng-repeat="legend in legends" class="no-padding no-padding"><span class="content col-xs-2 no-padding" ng-bind="legend.name"></span>
+							<p ng-repeat="legend in legends" class="no-padding text-center"><span class="content col-xs-2 no-padding" ng-bind="legend.name"></span>
 
 								<span class="legend-cover">
 									<span class="legend-main" ng-style="{'background-color':legend.color,'width':(legend.value)+'%'}">
