--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -449,9 +449,9 @@
                 <div class="radio-cover">
                     <input type="radio" required id="option2Type3" name="option2" ng-model="modelVal.A11" value="op3"><label for="option2Type3"><span></span>Sell all mutual fund holdings</label>
                     <input type="radio" required id="option2Type2" name="option2" ng-model="modelVal.A11" value="op2"><label for="option2Type2"><span></span>Shift from Equity to Debt funds</label>
-                    <input type="radio" required id="option2Type4" name="option2" ng-model="modelVal.A11" value="op4"><label for="option2Type4"><span></span>Do Nothing</label>
+                    <input type="radio" required id="option2Type4" name="option2" ng-model="modelVal.A11" value="op4"><label for="option2Type4"><span></span>Do nothing</label>
                     <input type="radio" required id="option2Type1" name="option2" ng-model="modelVal.A11" value="op1"><label for="option2Type1"><span></span>Buy more mutual funds</label>
-                    <input type="radio" required id="option2Type1" name="option2" ng-model="modelVal.A11" value="op5"><label for="option2Type1"><span></span>Not be sure what to do</label>
+                    <input type="radio" required id="option2Type5" name="option2" ng-model="modelVal.A11" value="op5"><label for="option2Type5"><span></span>Not be sure what to do</label>
                 </div>
                 </form>
             </div>
@@ -479,7 +479,7 @@
                     <input type="radio" required id="option4Type2" name="option3" ng-model="modelVal.A13" value="op2"><label for="option4Type2"><span></span>Shift from Equity to Debt funds</label>
                     <input type="radio" required id="option4Type4" name="option4" ng-model="modelVal.A13" value="op4"><label for="option4Type4"><span></span>Do Nothing</label>
                     <input type="radio" required id="option4Type1" name="option4" ng-model="modelVal.A13" value="op1"><label for="option4Type1"><span></span>Look to buy more mutual funds</label>
-                    <input type="radio" required id="option4Type1" name="option4" ng-model="modelVal.A13" value="op5"><label for="option4Type1"><span></span>Not be sure what to do</label>
+                    <input type="radio" required id="option4Type5" name="option4" ng-model="modelVal.A13" value="op5"><label for="option4Type5"><span></span>Not be sure what to do</label>
                 </div>
                 </form>
             </div>
@@ -493,7 +493,7 @@
                     <input type="radio" required id="option5Type2" name="option3" ng-model="modelVal.A14" value="op2"><label for="option5Type2"><span class="col-xs-2"></span>Probably choose the stable job with low growth</label>
                     <input type="radio" required id="option5Type3" name="option5" ng-model="modelVal.A14" value="op3"><label for="option5Type3"><span class="col-xs-2"></span>Not be sure</label>
                     <input type="radio" required id="option5Type4" name="option5" ng-model="modelVal.A14" value="op4"><label for="option5Type4"><span class="col-xs-2"></span>Probably choose the less secure job with high growth</label>
-                    <input type="radio" required id="option5Type4" name="option5" ng-model="modelVal.A14" value="op5"><label for="option5Type4"><span class="col-xs-2"></span>Definitely choose the less secure job with high growth</label>
+                    <input type="radio" required id="option5Type5" name="option5" ng-model="modelVal.A14" value="op5"><label for="option5Type5"><span class="col-xs-2"></span>Definitely choose the less secure job with high growth</label>
                 </div>
                 </form>
             </div>
