--- a/less/swiper.less
+++ b/less/swiper.less
@@ -749,6 +749,7 @@
       .fin-btn-group-wrapper{
         position: absolute;
         bottom: 2%;
+        padding: 0;
       }   
       .fin-btn-group{
         &.gotoPages{
