Fixed risk assessment back issue and other UI issues

--- a/less/swiper.less
+++ b/less/swiper.less
@@ -291,7 +291,7 @@
         }
       }
       .swiper-content{
-        padding-bottom:150px;
+        padding-bottom:100px;
         padding-top:6%;
         min-height:500px;
         @media @below768{
@@ -482,15 +482,15 @@
         }
         &.content-1{
           position:absolute;
-          top:48%;
-          transform:translateY(-48%);
+          /*top:48%;*/
+          /*transform:translateY(-48%);*/
           @media @below768{
            
-            transform:translateY(-48%);
+            
           }
           .incomeSource{
             @media @below768{
-              height: 220px;
+             
               .selectRisk_cover{
                 margin-left: 3%;
                 .risk-options{
