--- a/app/modules/common/views/partials/swiper.html
+++ b/app/modules/common/views/partials/swiper.html
@@ -8,9 +8,9 @@
             <form name="riskAssesment1Form1" novalidate ng-init="step = 1">
             <div class="swiper-content content-1 content-risk" ng-init="disabled = 'locked'">
 
-                <div class="col-lg-7 col-xs-12">
-                    <p class="pull-left col-lg-3 col-md-3 col-sm-3 col-xs-5 risk-questions">I am a <span class="swiper-input risk-age"><input only-number type="text" name="year" required ng-model="modelVal.A1"></span> year old</p><!-- <select dropdown dropdown-disable="disabled" ng-model="modelVal.A7"><option value="op1">Male</option><option value="op2">Female</option></select> -->
-                    <div class="selectRisk_cover col-lg-1 col-xs-3 col-md-1 no-padding">
+                <div class="col-lg-7 col-md-9 col-sm-8 col-xs-12">
+                    <p class="pull-left col-lg-3 col-md-3 col-sm-5 col-xs-5 risk-questions">I am a <span class="swiper-input risk-age"><input only-number type="text" name="year" required ng-model="modelVal.A1"></span> year old</p><!-- <select dropdown dropdown-disable="disabled" ng-model="modelVal.A7"><option value="op1">Male</option><option value="op2">Female</option></select> -->
+                    <div class="selectRisk_cover col-sm-2 col-lg-1 col-xs-3 col-md-1 no-padding">
                         <input type="radio" required id="male" name="gender" ng-model="modelVal.A7" value="op1">
                         <label for ="male">
                             <img src="assets/images/riskassessmentMale.png" class="img img-responsive">
@@ -18,7 +18,7 @@
                         </label>
                     </div>
 
-                    <div class="selectRisk_cover col-lg-1 col-xs-3 col-md-1 no-padding">
+                    <div class="selectRisk_cover col-sm-2 col-lg-1 col-xs-3 col-md-1 no-padding">
                         <input type="radio" required id="female" name="gender" ng-model="modelVal.A7" value="op2">
                         <label for ="female">
                             <img src="assets/images/riskassessmentFemale.png" class="img img-responsive">
@@ -27,9 +27,9 @@
                     </div>
                 </div>
 
-                <div class="col-lg-7 col-xs-12 addPadding-4PerMob">
-                <p class="pull-left col-lg-1 col-xs-3 col-sm-2 col-md-1 risk-questions">I am</p> 
-                <div class="selectRisk_cover col-lg-1 col-xs-3 col-md-1 no-padding">
+                <div class="col-lg-7 col-sm-8 col-md-9 col-xs-12 addPadding-4PerMob">
+                <p class="pull-left col-lg-1 col-xs-3 col-sm-2 col-md-2 risk-questions">I am</p> 
+                <div class="selectRisk_cover col-sm-2 col-lg-1 col-xs-3 col-md-1 no-padding">
                     <input type="radio" required id="single" name="marital" ng-model="modelVal.A17" value="op1">
                     <label for ="single">
                         <img src="assets/images/riskassessmentSingle.png" class="img img-responsive">
@@ -37,7 +37,7 @@
                     </label>
                 </div>
 
-                <div class="selectRisk_cover col-lg-1 col-xs-3 col-md-1 no-padding">
+                <div class="selectRisk_cover col-sm-2 col-lg-1 col-xs-3 col-md-1 no-padding">
                     <input type="radio" required id="married" name="marital" ng-model="modelVal.A17" value="op2">
                     <label for ="married">
                         <img src="assets/images/riskassessmentMarried.png" class="img img-responsive">
@@ -48,7 +48,7 @@
                  <!-- <select dropdown ng-model="modelVal.A17"><option selected value="op1">Single</option><option value="op2">Married</option></select></p> -->
                 </div> 
 
-                <div class="col-lg-7 col-xs-12 addPadding-4PerMob">
+                <div class="col-lg-7 col-md-9 col-xs-12 addPadding-4PerMob">
                     <p class="col-lg-1 col-xs-3 col-md-1 col-sm-1 paddingTop2">with</p> 
 
                     <div class="selectRisk_cover col-lg-1 col-md-1 col-sm-1 col-xs-2 no-paddingLR">
@@ -82,7 +82,7 @@
 
                 </div>    
 
-                <div class="col-lg-7 col-xs-12 addPadding-4PerMob">
+                <div class="col-lg-7 col-md-9 col-xs-12 addPadding-4PerMob">
                     <p class="col-lg-1 col-xs-3 col-md-1 col-sm-1 paddingTop2">with</p> 
 
                     <div class="selectRisk_cover col-lg-1 col-md-1 col-sm-1 col-xs-2 no-paddingLR">
@@ -118,7 +118,7 @@
                 <select dropdown ng-model="modelVal.A16"><option selected value="op1">No</option><option value="op2">1</option>
                 <option value="op3">2</option></select>dependent parents</p -->
 
-                <div class="col-lg-7 col-xs-12 addPadding-4PerMob incomeSource">
+                <div class="col-lg-7 col-md-9 col-xs-12 addPadding-4PerMob incomeSource">
                     <p class="pull-left col-lg-1 risk-questions hidden-xs">and</p><!-- <select dropdown dropdown-disable="disabled" ng-model="modelVal.A7"><option value="op1">Male</option><option value="op2">Female</option></select> -->
                     <div class="selectRisk_cover col-lg-1 col-md-1 col-sm-1 col-xs-2 no-padding">
                         <input type="radio" required id="salary" name="occupation" ng-model="modelVal.A18" value="op1">
@@ -417,7 +417,8 @@
 
     <div class="col-xs-8 col-lg-4 col-sm-7 col-md-4 fin-btn-group-wrapper">
         <div class="fin-btn-group gotoPages" ng-show="$root.lastSlide">
-            <button ng-show="step == 1" class="fin-link-btn content-prev" click-redirect="dashboard"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
+            <button ng-show="step == 1 && $root.loggedIn" class="fin-link-btn content-prev" click-redirect="dashboard"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
+            <button ng-show="step == 1 && !$root.loggedIn" class="fin-link-btn content-prev" click-redirect="gettingStarted"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
             <button ng-show="step > 1" class="fin-link-btn content-prev" ng-click="(step != 1) && (step = step - 1)"><span><img src="assets/images/startedArrow.png"></span>BACK</button>
             <button ng-show="step == 1" ng-disabled="riskAssesment1Form1.$invalid" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
             <button ng-show="step == 2" ng-disabled="riskAssesment1Form12.$invalid" ng-click="appendValues(modelVal);(step = step + 1)" class="fin-app-btn fin-orange content-next">CONTINUE</button>
