--- a/app/modules/planinvestment/modules/earnInterest/views/earnInterestStart.html
+++ b/app/modules/planinvestment/modules/earnInterest/views/earnInterestStart.html
@@ -1,7 +1,7 @@
 <section class="fadeIn dashboard goals">
 	<div class="col-xs-12 goal-section">
 		<div class="row">
-			<div class="col-xs-12 col-sm-12 col-md-6 col-lg-3 goals-outer-cover">
+			<div class="col-xs-12 col-sm-4 col-md-4 col-lg-3 goals-outer-cover">
 				<div class="goals-cover">
 						<div class="image-div">
 							<img src="assets/images/earnhigherinterest_transparent.png">
@@ -17,7 +17,7 @@
 			</div>
 		</div>
 	</div>
-	<div class="col-xs-12 col-lg-5 col-md-7 bottom-desc">
+	<div class="col-xs-12 col-lg-5 col-sm-7 col-md-7 bottom-desc">
 		<div class="fin-btn-group addMargin text-left">
             <button click-redirect="/planInvest" class="fin-link-btn content-prev text-left"><span><img src="assets/images/startedArrow.png"></span>CONTINUE PLANNING</button>
             <button click-redirect="/earnInterest" class="fin-app-btn fin-orange">CONTINUE</button>
