--- a/less/table.less
+++ b/less/table.less
@@ -485,6 +485,9 @@
 						margin-right:0px;
 					}
 				}
+				input[type="checkbox"][disabled] + label span{
+					opacity: 0.3;
+				}
 			}
 			.input-cover{
 				width:100%;
@@ -512,6 +515,9 @@
 				padding-left:12px;
 				padding-bottom:5px;
 				text-align:left;
+			}
+			input[type="text"][disabled]{
+				opacity: 0.5;
 			}
 			
 		}
