--- a/app/modules/goals/modules/automobile/views/automobileStarted.html
+++ b/app/modules/goals/modules/automobile/views/automobileStarted.html
@@ -11,7 +11,7 @@
             <input type="radio" required id="option1Type3" name="option1" ng-model="$root.selectedCriteria" value="op2"><label for="option1Type3"><span></span>Please help me estimate</label>
             <input type="radio" required id="option1Type1" name="option1" ng-model="$root.selectedCriteria" value="op1"><label for="option1Type1"><span></span>I want to plan myself</label>
         </div>
-        <div class="col-xs-12 col-lg-5 col-md-7">
+        <div class="col-xs-12 col-sm-7 col-lg-5 col-md-7">
             <div class="row">
                 <div class="fin-btn-cover started">
                     <div class="fin-btn-group">
