--- a/app/modules/planinvestment/modules/taxsaving/views/taxsavingStarted.html
+++ b/app/modules/planinvestment/modules/taxsaving/views/taxsavingStarted.html
@@ -9,7 +9,7 @@
             <span class="nextline">and save taxes under section 80C up o <span class="currency">&#8377</span> 46,350.</span></h2> -->
             <h2 class="pull-left"><strong><i>Nothing is certain except death and taxes. In fact taxes are to be paid every year!</i></strong><span class="nextline paddingTop2">Invest now in ELSS (Equity Linked Savings Schemes) and save taxes while you build wealth.</span></h2>
         </div>                
-        <div class="col-xs-12 col-lg-5 col-md-7">
+        <div class="col-xs-12 col-lg-5 col-sm-7 col-md-7">
             <div class="row">
                 <div class="fin-btn-cover started">
                     <div class="fin-btn-group">
